# foo

./: .gitignore  README.md  build.sh  deploy.sh  index.md  main_remote.c
armgcc/: CMakeLists.txt  output.map
armgcc/.cmake/api/v1/reply/: cache-v2-094e0cf264c8be78b1e3.json  cmakeFiles-v1-79b6a8e9b992b66fa047.json  codemodel-v2-e4e8c50cbf2ef891117a.json  index-2021-10-01T15-21-06-0934.json  target-rpmsg_lite_str_echo_rtos_imxcm4.elf-Debug-0cd2d8bfce13631b3e9b.json
armgcc/Debug/: rpmsg_lite_str_echo_rtos_imxcm4.elf
